package com.example.essence.data.model

class BreakdownPAGIBIG(
    val employeeRate: Double,
    val employeeShare: Double,
    val employerShare: Double,
    val totalContribution: Double
) {

}

