package com.example.essence.data.model

class BreakdownPhilHealth(
    val contribution: Double,
    val employeeShare: Double,
    val employerShare: Double,
    val totalContribution: Double
) {
}