package com.example.essence.data.model

/**
 * Defines the access level of the user in the app.
 */
enum class UserRole {
    EMPLOYEE,
    MANAGER,
    ADMIN // You might have an admin role
}